--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
 
 
   cupertino_icons: ^1.0.8
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
+  cloud_firestore: ^6.1.1
+  app_links: ^6.4.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
